--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "vue-cli-plugin-e2e-nightwatch-cucumber",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "description": "Nightwatch/Cucumber plugin for Vue CLI 3",
+  "keywords": [
+    "vue",
+    "cli",
+    "e2e-nightwatch",
+    "e2e-nightwatch-cucumber"
+  ],
   "main": "index.js",
   "author": "Manuel Wieser <manuel.wieser@karriere.at>",
   "license": "MIT",
@@ -9,10 +15,10 @@
     "type": "git",
     "url": "git+https://github.com/karriereat/vue-cli-plugin-e2e-nightwatch-cucumber.git"
   },
+  "bugs": {
+    "url": "https://github.com/karriereat/vue-cli-plugin-e2e-nightwatch-cucumber/issues"
+  },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "chromedriver": "^2.43.0",
     "cucumber": "^4.2.1",
     "cucumber-pretty": "^1.4.4",
