--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-e2e-nightwatch-cucumber",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Nightwatch/Cucumber plugin for Vue CLI 3",
   "keywords": [
     "vue",
@@ -19,8 +19,11 @@
     "url": "https://github.com/karriereat/vue-cli-plugin-e2e-nightwatch-cucumber/issues"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "chromedriver": "^2.43.0",
-    "cucumber": "^4.2.1",
+    "cucumber": "^5.0.2",
     "cucumber-pretty": "^1.4.4",
     "execa": "^1.0.0",
     "geckodriver": "^1.11.0",
