--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-e2e-nightwatch-cucumber",
-  "version": "0.6.1",
+  "version": "1.0.0-alpha.1",
   "description": "Nightwatch/Cucumber plugin for Vue CLI 3",
   "keywords": [
     "vue",
@@ -22,16 +22,16 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "chromedriver": "^2.43.0",
+    "chromedriver": "^2.43.1",
     "cucumber": "^5.0.2",
     "cucumber-pretty": "^1.4.4",
     "execa": "^1.0.0",
     "geckodriver": "^1.11.0",
     "nightwatch": "1.0.6",
-    "nightwatch-api": "0.4.0"
+    "nightwatch-api": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
