--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "url": "https://github.com/karriereat/vue-cli-plugin-e2e-nightwatch-cucumber/issues"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "chromedriver": "^2.46.0",
-    "cucumber": "^5.1.0",
-    "cucumber-pretty": "^1.5.0",
-    "execa": "^1.0.0",
-    "geckodriver": "^1.14.1",
-    "nightwatch": "^1.0.18",
-    "nightwatch-api": "^2.1.1"
+    "@babel/core": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "chromedriver": "^80.0.1",
+    "cucumber": "^6.0.5",
+    "cucumber-pretty": "^6.0.0",
+    "execa": "^4.0.0",
+    "geckodriver": "^1.19.1",
+    "nightwatch": "^1.3.4",
+    "nightwatch-api": "^3.0.1"
   },
   "devDependencies": {
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3"
   }
 }
